# cognitive-twin

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
config/: default.json
docs/: PRD.md
docs/architecture/: data-flow.md  system-overview.md
docs/assets/: .gitkeep
src/: __init__.py  config.py  main.py  models.py
src/acquisition/: __init__.py  camera.py  consent.py
src/cognitive/: __init__.py  digital_twin.py  temporal_model.py
src/estimation/: __init__.py  estimator.py
src/explanation/: __init__.py  generator.py  prompts.py
src/explanation/providers/: __init__.py  base.py  ollama.py  openrouter.py
src/features/: __init__.py  blink_detector.py  extractor.py  eye_analyzer.py  head_pose.py
src/storage/: __init__.py  database.py  feedback.py  session_manager.py
src/ui/: dashboard.py
tests/: __init__.py  conftest.py  test_config.py  test_digital_twin.py  test_models.py
